<!--
  ~ Created by YSN Studio on 5/29/18 1:22 PM
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 5/29/18 1:13 PM
  -->

<resources>
    <string name="app_name">CuacaIn</string>
    <string name="image_view_settings">image view settings</string>
    <string name="image_view_background">image view background</string>
    <string name="image_view_background_overlay">image view background overlay</string>
    <string name="quote_of_today">Quote of Today</string>
    <string name="example_quote_of_today">Keep smile and write code</string>
    <string name="example_author_quote_of_today">Tom Hanks</string>
    <string name="forecast">Forecast</string>
    <string name="weather">Weather:</string>
    <string name="condition">Condition:</string>
    <string name="image_view_icon_weather">image view icon weather</string>
    <string name="example_temperature">23</string>
    <string name="o">o</string>
    <string name="example_condition_weather">Quite Wet</string>
    <string name="headline">Headline</string>
    <string name="_00_00">00:00</string>
    <string name="image_view_banner_dbs">image view banner dbs</string>
    <string name="all_permissions_denied">All those permissions are needed for doing some magic</string>
    <string name="settings">Settings</string>
    <string name="error_occured_to_get_your_location">Error occured to get your location</string>
    <string name="minus">-</string>
    <string name="symbol_fahrenheit">F</string>
    <string name="image_view_icon_accu_weather">image view icon accu weather</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="developed_by_ysn_studio">Developed by \nYSN Studio</string>
    <string name="image_view_icon_arrow_left">image view icon arrow left</string>
    <string name="image_view_icon_arrow_right">image view icon arrow right</string>
</resources>
