<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by YSN Studio on 5/10/18 10:31 PM
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 5/10/18 7:05 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/vertical_margin_16dp"
    android:paddingLeft="@dimen/horizontal_margin_16dp"
    android:paddingRight="@dimen/horizontal_margin_16dp"
    android:paddingTop="@dimen/vertical_margin_16dp">

    <TextView
        android:id="@+id/text_view_time_item_forecast_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/_00_00"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image_view_icon_weather"
        android:src="@drawable/img_03_s" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_temperature"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/text_view_1"
            android:text="@string/o"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>
