<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by YSN Studio on 5/23/18 7:52 AM
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 5/23/18 7:50 AM
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/vertical_margin_16dp"
    android:paddingLeft="@dimen/horizontal_margin_16dp"
    android:paddingRight="@dimen/horizontal_margin_16dp"
    android:paddingTop="@dimen/vertical_margin_16dp"
    tools:context=".views.ui.activity.aboutapp.AboutAppActivity">

    <TextView
        android:id="@+id/text_view_app_name_activity_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/raleway_extra_light"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_view_app_version_name_activity_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_app_name_activity_about_app"
        android:layout_centerHorizontal="true"
        android:text="@string/_1_0_0"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/developed_by_ysn_studio"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/image_view_banner_dbs"
        android:src="@drawable/img_banner_dbs" />

</RelativeLayout>