<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by YSN Studio on 5/12/18 7:43 AM
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 5/12/18 7:38 AM
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ui.home.HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_view_background"
        android:scaleType="centerCrop"
        android:src="@drawable/pexels_photo_531321" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="#000000"
        android:contentDescription="@string/image_view_background_overlay" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_settings_activity_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/image_view_settings"
                android:paddingEnd="@dimen/horizontal_margin_16dp"
                android:paddingStart="@dimen/horizontal_margin_16dp"
                android:src="@drawable/ic_settings_white_24dp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_activity_home">

        <RelativeLayout
            android:id="@+id/relative_layout_container_overlay_quote_of_today_activity_home"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginEnd="@dimen/horizontal_margin_16dp"
            android:layout_marginStart="@dimen/horizontal_margin_16dp"
            android:layout_marginTop="@dimen/vertical_margin_16dp"
            android:alpha="0.7"
            android:background="@drawable/background_gradient_teal" />

        <RelativeLayout
            android:id="@+id/relative_layout_container_quote_of_today_activity_home"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginEnd="@dimen/horizontal_margin_16dp"
            android:layout_marginStart="@dimen/horizontal_margin_16dp"
            android:layout_marginTop="@dimen/vertical_margin_16dp"
            android:paddingBottom="@dimen/vertical_margin_16dp"
            android:paddingEnd="@dimen/horizontal_margin_16dp"
            android:paddingStart="@dimen/horizontal_margin_16dp"
            android:paddingTop="@dimen/vertical_margin_16dp">

            <TextView
                android:id="@+id/text_view_title_quote_of_today_activity_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/quote_of_today"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_value_quote_of_today_activity_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_title_quote_of_today_activity_home"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/example_quote_of_today"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/text_view_author_quote_of_today_activity_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/example_author_quote_of_today"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progress_bar_quote_of_today_activity_home"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="invisible" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_container_forecast_activity_home"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_alignParentBottom="true">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_forecast_activity_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear_layout_container_headline_activity_home"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_above="@+id/relative_layout_container_forecast_activity_home"
            android:orientation="vertical"
            android:paddingBottom="@dimen/vertical_margin_24dp"
            android:paddingLeft="@dimen/horizontal_margin_16dp"
            android:paddingRight="@dimen/horizontal_margin_16dp"
            android:paddingTop="@dimen/vertical_margin_24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin_8dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/weather"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/horizontal_margin_8dp"
                    android:contentDescription="@string/image_view_icon_weather"
                    android:scaleType="center"
                    android:src="@drawable/img_05_s"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/example_temperature"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:text="@string/o"
                    android:textColor="@android:color/white"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/condition"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view_icon_weather_headline_activity_home"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/horizontal_margin_8dp"
                    android:contentDescription="@string/image_view_icon_weather"
                    android:scaleType="center"
                    android:src="@drawable/img_05_s" />

                <TextView
                    android:id="@+id/text_view_weather_temperature_headline_activity_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/example_temperature"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/weather"
                    android:textColor="@android:color/white"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/text_view_weather_condition_headline_activity_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/example_condition_weather"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="115dp"
            android:background="@drawable/background_rounded_darker_gray"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingBottom="4dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="4dp"
            android:text="@string/forecast"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relative_layout_container_forecast_activity_home"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="115dp"
            android:background="@drawable/background_rounded_darker_gray"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingBottom="4dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="4dp"
            android:text="@string/headline"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </RelativeLayout>


</RelativeLayout>